--- a/Style.css
+++ b/Style.css
@@ -1,41 +1,49 @@
-/* body{
-            background-image: url(assets/developer.png);
-            background-repeat: no-repeat;
-            background-size: cover;
-        } */
-        .main-division {
-            width: 370px;
-            border: 1px solid gray;
-            border-radius: 12px;
-            margin: 20px auto;
-          }
-          #item-photo img {
-            width: 350px;
-            height: 250px;
-            border-radius: 20px;
-            padding: 8px;
-            /* position: relative; */
-          }
-          #best-seller {
-            color: rgb(2, 81, 81);
-            font-weight: bolder;
-            background-color: rgb(216, 239, 242);
-            padding: 3px 5px 3px 5px;
-            border-radius: 8px;
-            border: 1px solid rgb(42, 137, 4);
-            position: absolute;
-            top: 40px;
-            left: 430px;
-          }
-          #item-desc {
-            padding: 8px;
-          }
-          #item-desc h2 {
-            margin-top: 0px;
-            margin-bottom: 0px;
-            text-align: center;
-          }
-          #item-desc p {
-            margin-top: 5px;
-            margin-bottom: 5px;
-          }
+#main-section{
+    margin: 40px auto;
+    width: 365px;
+    border-radius: 10px;
+    padding: 5px;
+    box-sizing: border-box;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+#sub-section{
+    margin: 8px
+}
+div img{
+    width: 340px;
+    height: 300px;
+    border-radius: 12px;
+}
+#Best-Seller{
+    color: rgb(2, 81, 81);
+    font-weight: bolder;
+    background-color: rgb(216, 239, 242);
+    padding: 3px 5px 3px 5px;
+    border-radius: 8px;
+    border: 1px solid rgb(42, 137, 4);
+    /* position: absolute;
+    top: 70px;
+    left: 620px; */
+    position: relative;
+    bottom: 290px;
+    left: 15px;
+}
+#must-try{
+    color: rgb(230, 119, 17);
+    font-weight: bolder;
+    background-color: rgb(216, 239, 242);
+    padding: 3px 5px 3px 5px;
+    border-radius: 8px;
+    border: 1px solid rgb(221, 9, 111);
+    /* position: absolute;
+    top: 310px;
+    left: 840px; */
+    position: relative;
+    bottom: 40px;
+    left: 160px;
+}
+h1{
+    text-align: center;
+}
