--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,14 @@
+/* Bootstrap ICON CDN Link */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
+#card-buttons{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 15px;
+    padding-left: 8px;
+    padding-right: 8px;
+
+}
 #main-section{
     margin: 40px auto;
     width: 365px;
